adding infor on prefix - suffix product

--- a/Patterns/PatternsOutline.tex
+++ b/Patterns/PatternsOutline.tex
@@ -3,6 +3,9 @@
 \section{Two Pointers}
 \include{Patterns/Two Pointers}
 
+\input{Patterns/Prefix-Suffix Product}
+
+
 \section{Fast and Slow Pointers}
 \include{Patterns/Fast and Slow Pointers}
 
