adding more patterns to the list with their leetcode problems

--- a/Patterns/PatternsOutline.tex
+++ b/Patterns/PatternsOutline.tex
@@ -1,45 +1,93 @@
 \chapter{Patterns}
-
-\section{Two Pointers}
-\include{Patterns/Two Pointers}
+\input{Patterns/Prefix-Sum Pattern}
+303, 525, 560
 
 \input{Patterns/Prefix-Suffix Product}
 
 
-\section{Fast and Slow Pointers}
-\include{Patterns/Fast and Slow Pointers}
+\input{Patterns/Two Pointers}
+167, 15, 11
 
-\section{Sliding Window}
-\include{Patterns/Sliding Window}
 
-\section{Merge Intervals}
-\include{Patterns/Merge Intervals}
+\input{Patterns/Fast and Slow Pointers}
+141, 202, 287
+
+\input{Patterns/Sliding Window}
+643, 3, 76
+
+\input{Patterns/In-place Reversal of a LinkedList}
+206, 92, 24
+
+\input{Patterns/Monotonic Stack}
+496, 739, 84
+
+
+\input{Patterns/Top K Elements}
+K Largest = Min - Heap
+K Smallest = Max - Heap
+215, 347, 373
+
+
+\input{Patterns/Merge Intervals}
+overlapping intervals
+56, 57, 435
+
+\section{Modified Binary Search}
+\include{Patterns/Modified Binary Search}
+33, 153, 240
+
+
+\input{Patterns/Tree Breadth First Search}
+102, 994, 127
+
+\input{Patterns/Tree Depth First Search}
+133, 113, 210
+
+\input Binary Tree Traversal
+PreOrder
+257
+
+InOrder
+239
+
+PostOrder
+124
+
+LevelOrder
+107
+
+
+\input{Patterns/Island}
+733, 200, 130
+
+
+\input{Patterns/Backtracking}
+46, 78, 51
+
+\input{Dynamic Programming}
+COmmon Dp Patterns
+1. Fibonaci Numbers
+2. 0/1 Knapsack
+3. Longest Common Subsequence
+4. Longest Increasing Subsequence
+5. Subset Sum
+6. Matrix Chain Multiplication
+70, 300, 322, 416, 1143, 312
 
 \section{Cyclic Sort}
 \include{Patterns/Cyclic Sort}
 
-\section{In-place Reversal of a LinkedList}
-\include{Patterns/In-place Reversal of a LinkedList}
-
 \section{Stack}
 \include{Patterns/Stack}
 
-\section{Monotonic Stack}
-\include{Patterns/Monotonic Stack}
-
 \input{Patterns/HashMap}
 
-\section{Tree Breadth First Search}
-\include{Patterns/Tree Breadth First Search}
 
-\section{Tree Depth First Search}
-\include{Patterns/Tree Depth First Search}
 
 \section{Graphs}
 \include{Patterns/Graphs}
 
-\section{Island (Matrix Traversal)}
-\include{Patterns/Island}
+
 
 \section{Two Heaps}
 \include{Patterns/Two Heaps}
@@ -47,14 +95,12 @@
 \section{Subsets}
 \include{Patterns/Subsets}
 
-\section{Modified Binary Search}
-\include{Patterns/Modified Binary Search}
+
 
 \section{Bitwise XOR}
 \include{Patterns/Bitwise XOR}
 
-\section{Top 'K' Elements}
-\include{Patterns/Top K Elements}
+
 
 \section{K-way Merge}
 \include{Patterns/K-way Merge}
@@ -65,8 +111,7 @@
 \section{0/1 Knapsack (Dynamic Programming)}
 \include{Patterns/Knapsack}
 
-\section{Backtracking}
-\include{Patterns/Backtracking}
+
 
 \section{Trie}
 \include{Patterns/Trie}
