Added linked list

--- a/General/DependencyInjection.tex
+++ b/General/DependencyInjection.tex
@@ -8,8 +8,8 @@
 		\begin{itemize}
 			\item Configuration objects
 			\item Logging services
-			\Database connection pools
-			\Caching mechanisms
+			\item Database connection pools
+			\item Caching mechanisms
 		\end{itemize}
 	\end{itemize}
 \section{Scoped}
