--- a/Patterns/Outline.tex
+++ b/Patterns/Outline.tex
@@ -9,26 +9,26 @@
 167, 15, 11
 
 
-\input{Patterns/Fast and Slow Pointers}
+\include{Patterns/Fast and Slow Pointers}
 141, 202, 287
 
-\input{Patterns/Sliding Window}
+\include{Patterns/Sliding Window} 
 643, 3, 76
 
-\input{Patterns/In-place Reversal of a LinkedList}
+\include{Patterns/In-place Reversal of a LinkedList}
 206, 92, 24
 
-\input{Patterns/Monotonic Stack}
+\include{Patterns/Monotonic Stack}
 496, 739, 84
 
 
-\input{Patterns/Top K Elements}
+\include{Patterns/Top K Elements}
 K Largest = Min - Heap
 K Smallest = Max - Heap
 215, 347, 373
 
 
-\input{Patterns/Merge Intervals}
+\include{Patterns/Merge Intervals}
 overlapping intervals
 56, 57, 435
 
@@ -37,14 +37,13 @@ overlapping intervals
 33, 153, 240
 
 
-\input{Patterns/Tree Breadth First Search}
+\include{Patterns/Tree Breadth First Search}
 102, 994, 127
 
-\input{Patterns/Tree Depth First Search}
+\include{Patterns/Tree Depth First Search}
 133, 113, 210
 
-\input Binary Tree Traversal
-PreOrder
+\include Binary Tree Traversal
 257
 
 InOrder
@@ -57,14 +56,14 @@ LevelOrder
 107
 
 
-\input{Patterns/Island}
+\include{Patterns/Island}
 733, 200, 130
 
 
-\input{Patterns/Backtracking}
+\include{Patterns/Backtracking}
 46, 78, 51
 
-\input{Dynamic Programming}
+\include{Dynamic Programming}
 COmmon Dp Patterns
 1. Fibonaci Numbers
 2. 0/1 Knapsack
