--- a/packages.tex
+++ b/packages.tex
@@ -2,6 +2,9 @@
 \usepackage{fancyhdr}  % For customizing headers and footers
 \usepackage{titlesec}  % For customizing title formats
 \usepackage{inconsolata}
+\usepackage[]{graphics} % For using local images
+\usepackage{graphics} % For using local images
+\usepackage{epstopdf}
 
 \usepackage{color}
 \definecolor{bluekeywords}{rgb}{0.13,0.13,1}
