removing all csharp stuff as this will be dsa specific

--- a/DataStructures/Outline.tex
+++ b/DataStructures/Outline.tex
@@ -8,7 +8,7 @@
 \include{DataStructures/Matrix}
 \include{DataStructures/LinkedList}
 \include{DataStructures/Queue}
-\include{DataStructures/Stack}
+\input{DataStructures/Stack}
 \include{DataStructures/Tree}
 \include{DataStructures/Graph}
 \include{DataStructures/Heap}
