working through heap

--- a/main.tex
+++ b/main.tex
@@ -34,8 +34,7 @@
  
 \newpage
 % Include other files here
-\include{Patterns/Outline}
-\include{DataStructures/Outline}
+\input{DataStructures/Heap}
 	
 
 
