--- a/packages.tex
+++ b/packages.tex
@@ -4,6 +4,7 @@
 \usepackage{inconsolata}
 \usepackage[]{graphics} % For using local images
 \usepackage{graphics} % For using local images
+\usepackage{geometry}
 \usepackage{epstopdf}
 
 \usepackage{color}
