--- a/packages.tex
+++ b/packages.tex
@@ -6,6 +6,7 @@
 \usepackage{graphics} % For using local images
 \usepackage{geometry}
 \usepackage{epstopdf}
+\usepackage{float}
 
 \usepackage{color}
 \definecolor{bluekeywords}{rgb}{0.13,0.13,1}
