added algo specs

--- a/packages.tex
+++ b/packages.tex
@@ -7,6 +7,7 @@
 \usepackage{geometry}
 \usepackage{epstopdf}
 \usepackage{float}
+\usepackage[dvipsnames]{xcolor} % For using colors
 
 \usepackage{color}
 \definecolor{bluekeywords}{rgb}{0.13,0.13,1}
